added defence to help stop rushes. added rushes on small maps asw