@@ -1,20 +1,20 @@
 package caterpillow.robot.agents.soldier;
 
+import java.util.ArrayList;
+import java.util.List;
+
 import battlecode.common.GameActionException;
+import battlecode.common.MapInfo;
 import battlecode.common.MapLocation;
 import battlecode.common.RobotInfo;
 import caterpillow.Game;
 import caterpillow.robot.Strategy;
 import caterpillow.robot.agents.Agent;
-import caterpillow.robot.agents.HomeStrategy;
 import caterpillow.robot.agents.TraverseStrategy;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Random;
-
-import static caterpillow.util.Util.*;
-import static caterpillow.Game.*;
+import static caterpillow.util.Util.getNearestRobot;
+import static caterpillow.util.Util.guessEnemyLocs;
+import static caterpillow.util.Util.indicate;
+import static caterpillow.util.Util.isFriendly;
 
 // pathfinding testing
 public class RushStrategy extends Strategy {
@@ -26,33 +26,29 @@ public class RushStrategy extends Strategy {
     Strategy primary;
     Strategy secondary;
 
-    public RushStrategy() {
+    public RushStrategy() throws GameActionException {
         bot = (Agent) Game.bot;
-        target = rot180(bot.home);
-        todo = new ArrayList<>();
+        List<MapLocation> todo = guessEnemyLocs(bot.home);
+        target = todo.get(0);
+        todo.remove(0);
 
-        // add backup targets
-        todo.add(flipHor(bot.home));
-        todo.add(flipVer(bot.home));
-
-        Collections.shuffle(todo, new Random(seed));
-
-        // starting strategy
-        primary = new TraverseStrategy(target, rc.getType().actionRadiusSquared);
+        // starting strategy. vision radius squared is 20
+        primary = new TraverseStrategy(target, 20);
     }
 
     @Override
     public boolean isComplete() throws GameActionException {
-        return primary instanceof HomeStrategy && primary.isComplete();
+        return primary instanceof ScoutStrategy && primary.isComplete();
     }
 
     @Override
     public void runTick() throws GameActionException {
         indicate("RUSHING");
-        // go home if its run out of things to do (which is unlikely since itll probably die first)
-        if (target == null && todo.isEmpty()) {
-            if (!(primary instanceof HomeStrategy)) {
-                primary = new HomeStrategy();
+        
+        // become a scout once done
+        if (target == null && todo==null) {
+            if (!(primary instanceof ScoutStrategy)) {
+                primary = new ScoutStrategy();
             }
             primary.runTick();
             return;
@@ -62,6 +58,17 @@ public class RushStrategy extends Strategy {
             RobotInfo nearest = getNearestRobot(b -> !isFriendly(b) && b.getType().isTowerType());
             if (nearest != null) {
                 secondary = new AttackTowerStrategy(nearest.getLocation());
+            }
+        }
+
+        if (secondary == null) {
+            MapInfo[] neighbours = Game.rc.senseNearbyMapInfos();
+            for (MapInfo info : neighbours) {
+                RobotInfo botThere = Game.rc.senseRobotAtLocation(info.getMapLocation());
+                if (info.hasRuin() && botThere == null) {
+                    secondary = new TrollRuinStrategy(info.getMapLocation());
+                    break;
+                }
             }
         }
 
@@ -75,16 +82,17 @@ public class RushStrategy extends Strategy {
         }
 
         if (primary.isComplete()) {
-            if (todo.isEmpty()) {
-                // start going home
+            if (todo==null) {
+                // become a scout
                 target = null;
                 runTick();
                 return;
             }
-            target = todo.getLast();
-            todo.removeLast();
-            primary = new TraverseStrategy(target, rc.getType().actionRadiusSquared);
+            target = todo.get(0);
+            todo.remove(0);
+            primary = new TraverseStrategy(target, 20);
         }
+        
         primary.runTick();
     }
 }
